--- a/src/components/Advertisement/Advertisement.css
+++ b/src/components/Advertisement/Advertisement.css
@@ -10,11 +10,11 @@
     gap: 1rem;
 }
 
-.ad .ad__img {
+.ad__img {
     padding-top: 2rem;
 }
 
-.ad .ad__text {
+.ad__text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -22,7 +22,7 @@
     gap: 2rem;
 }
 
-.ad .ad__text button {
+.ad__text button {
     padding: 1rem;
     border-radius: 5px;
     color: white;
@@ -38,12 +38,12 @@
         padding: 2rem 0;
     }
 
-    .ad .ad__img img {
+    .ad__img img {
         height: 200px;
         width: 350px;
     }
 
-    .ad .ad__text {
+    .ad__text {
         align-items: center;
         gap: 0.5rem;
     }
