--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -35,7 +35,7 @@
     padding: 0 1rem;
 }
 
-.event__info .event__description {
+.event__description {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -43,7 +43,7 @@
     margin-bottom: 0.5rem;
 }
 
-.event__info .event__title {
+.event__title {
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -51,7 +51,7 @@
     margin-bottom: 0.5rem;
 }
 
-.event__info .event__dt {
+.event__dt {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -60,7 +60,7 @@
     margin-bottom: 0.5rem;
 }
 
-.event__info .event__dt .event__date {
+.event__date {
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
@@ -68,7 +68,7 @@
     margin-right: 1rem;
 }
 
-.event__info .event__dt .event__time {
+.event__time {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -78,7 +78,7 @@
     background: #7848f4;
 }
 
-.event__info .event__location {
+.event__location {
     font-size: 1.2rem;
     font-weight: 500;
     color: #131315;
