--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -44,51 +44,25 @@
         }
     }
     &__book {
+                    display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 15px 40px;
+            gap: 15px;
         button {
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
             padding: 15px 40px;
-            gap: 10px;
+            gap: 5px;
 
-            width: 325px;
-            height: 49px;
+            width: 200px;
+            height: 40px;
             background: #7848f4;
             border-radius: 5px;
             color: #ffffff;
         }
-    }
-    &__promote {
-        button {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            padding: 15px 40px;
-            gap: 10px;
-
-            width: 325px;
-            height: 49px;
-
-            background: #c5c5c5;
-            border-radius: 5px;
-
-            flex: none;
-            order: 1;
-            align-self: stretch;
-            flex-grow: 0;
-            color: #ffffff;
-        }
-    }
-    &__refund {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        color: #7e7e7e;
     }
 }
